added newline to other articles

--- a/scripts/html_data_extract.ipynb
+++ b/scripts/html_data_extract.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,6 @@
     "    # website, title, author, content\n",
     "    source = json.loads(content)['publisher']['name']\n",
     "    title = json.loads(content)['headline']\n",
-    "    print(json.loads(content).keys())\n",
     "    \n",
     "    if source in ['Daily Mail', 'The Sun']:\n",
     "        # Title\n",
@@ -56,7 +55,10 @@
     "        main_text = [p.text for p in main_text]\n",
     "        main_text = '\\n'.join(main_text)\n",
     "    else:\n",
-    "        main_text = json.loads(content)['articleBody']\n",
+    "        #main_text = json.loads(content)['articleBody']\n",
+    "        main_text = soup.find_all('p')\n",
+    "        main_text = [p.text for p in main_text]\n",
+    "        main_text = '\\n'.join(main_text)\n",
     "    \n",
     "    author = json.loads(content)['author']\n",
     "    if type(author) == dict:\n",
@@ -81,26 +83,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['@context', '@type', 'mainEntityOfPage', 'headline', 'articleBody', 'datePublished', 'dateModified', 'description', 'author', 'publisher', 'image'])\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "('We must stop mask mandates before Biden and Democrats force them on us again. Here’s how we do it',\n",
-       " 'Dr. Anthony Fauci, the former chief medical adviser to the president,&nbsp;took to CNN this past weekend to sound the alarm. According to him, COVID cases are spiking, and the American people urgently need to mask up. Is anyone surprised?&nbsp;&nbsp; Fauci and his cabal crave power over everything else. But if I have anything to say about it, they won’t ever have the authority to impose mask mandates or trample our freedoms again.&nbsp; As we learned in the pandemic, public health bureaucrats will force compliance when the people won’t abide their recommendations. With the latest seasonal spike, they are back to their old ways.&nbsp; BIDEN JOKES ABOUT BEING FORCED TO WEAR A MASK: \\'DON\\'T TELL THEM I DIDN\\'T HAVE IT ON\\' Already public health experts and university officials are calling for masks to be reimposed. Businesses and universities are reinstating mask mandates. Even an elementary school is forcibly masking children in response to a few COVID-19 cases. &nbsp;  We all know how this goes. It starts with mask mandates, then social distancing, and then forced lockdowns to \"slow the spread.\" None of it works, but it costs us dearly. It robbed us of our basic freedoms and shattered our national unity amid a crisis. We cannot let it happen again. &nbsp; Democrats insist they have no plans to mandate masking again. So, let’s hold them to their words and end the specter of COVID-19 tyranny for good. Today, I will go to the Senate floor to request unanimous consent on my \"Freedom to Breathe Act.\" That means if no one objects, the bill passes automatically. But if Senate Democrats block my legislation, they must be planning to reinstate mask mandates once again.&nbsp; The bill is very simple. It prohibits government from forcing you to wear a mask on planes, on public transit, or in public schools for the next 15 months. It also blocks taxpayer dollars from being used to enforce a mask mandate.&nbsp; Any reasonable Democrat should be willing to agree with this legislation. It’s narrowly targeted to non-healthcare sectors; hospitals and nursing homes will still be free to issue masking and public health guidelines as they handle seasonal spikes and viral mutations.&nbsp;  CLICK HERE FOR MORE FOX NEWS OPINION The bill also doesn’t prohibit voluntary masking. Individuals will be free to choose whether to wear a mask. &nbsp; Those who oppose the bill may claim to \"follow the science,\" but they’d be wrong. With years of experience and experimental study, the effects of masking are clear. There is no robust high-quality evidence that masking slows the spread of respiratory infections like COVID-19. But it can lead to unhealthy levels of CO2 inhalation, jeopardize early childhood development and exacerbate speech and language disorders. In most cases, a mask is nothing more than a false sense of protection.&nbsp; Many of us remember the widespread rejoicing when the last mask mandates were ended. Airline passengers cheered. School children erupted in joy. Many breathed a sigh of relief — finally unencumbered. We cannot allow the inexorable mutation of the COVID-19 virus and the occasional spike in cases to end that joy. CLICK HERE TO GET THE FOX NEWS APP Americans should be free to live their lives — to travel, to work and go to school — without subjection to needless force. Let’s pass the Freedom to Breathe Act and ensure that they can.&nbsp; COVID may have taken American lives, but it can never again take Americans’ freedom. &nbsp; CLICK HERE TO READ MORE FROM SEN. J.D. VANCE',\n",
+       " '\\n      This material may not be published, broadcast, rewritten,\\n      or redistributed. ©2023 FOX News Network, LLC. All rights reserved.\\n      Quotes displayed in real-time or delayed by at least 15 minutes. Market data provided by Factset. Powered and implemented by FactSet Digital Solutions. Legal Statement. Mutual Fund and ETF data provided by Refinitiv Lipper.\\n    \\nFox News senior national correspondent Rich Edson has more on pushback against the possible return of mask mandates amid an uptick in COVID cases on \\'Special Report.\\'\\xa0\\nDr. Anthony Fauci, the former chief medical adviser to the president,\\xa0took to CNN this past weekend to sound the alarm. According to him, COVID cases are spiking, and the American people urgently need to mask up. Is anyone surprised?\\xa0\\xa0\\nFauci and his cabal crave power over everything else. But if I have anything to say about it, they won’t ever have the authority to impose mask mandates or trample our freedoms again.\\xa0\\nAs we learned in the pandemic, public health bureaucrats will force compliance when the people won’t abide their recommendations. With the latest seasonal spike, they are back to their old ways.\\xa0\\nBIDEN JOKES ABOUT BEING FORCED TO WEAR A MASK: \\'DON\\'T TELL THEM I DIDN\\'T HAVE IT ON\\'\\nAlready public health experts and university officials are calling for masks to be reimposed. Businesses and universities are reinstating mask mandates. Even an elementary school is forcibly masking children in response to a few COVID-19 cases. \\xa0\\nDr. Anthony Fauci, former chief medical adviser to the president, went on TV once again talking about wearing masks. (Anna Moneymaker/Getty Images)\\nWe all know how this goes. It starts with mask mandates, then social distancing, and then forced lockdowns to \"slow the spread.\" None of it works, but it costs us dearly. It robbed us of our basic freedoms and shattered our national unity amid a crisis. We cannot let it happen again. \\xa0\\nDemocrats insist they have no plans to mandate masking again. So, let’s hold them to their words and end the specter of COVID-19 tyranny for good. Today, I will go to the Senate floor to request unanimous consent on my \"Freedom to Breathe Act.\" That means if no one objects, the bill passes automatically. But if Senate Democrats block my legislation, they must be planning to reinstate mask mandates once again.\\xa0\\nThe bill is very simple. It prohibits government from forcing you to wear a mask on planes, on public transit, or in public schools for the next 15 months. It also blocks taxpayer dollars from being used to enforce a mask mandate.\\xa0\\nAny reasonable Democrat should be willing to agree with this legislation. It’s narrowly targeted to non-healthcare sectors; hospitals and nursing homes will still be free to issue masking and public health guidelines as they handle seasonal spikes and viral mutations.\\xa0\\nCLICK HERE FOR MORE FOX NEWS OPINION\\nThe bill also doesn’t prohibit voluntary masking. Individuals will be free to choose whether to wear a mask. \\xa0\\nThose who oppose the bill may claim to \"follow the science,\" but they’d be wrong. With years of experience and experimental study, the effects of masking are clear. There is no robust high-quality evidence that masking slows the spread of respiratory infections like COVID-19. But it can lead to unhealthy levels of CO2 inhalation, jeopardize early childhood development and exacerbate speech and language disorders. In most cases, a mask is nothing more than a false sense of protection.\\xa0\\nMany of us remember the widespread rejoicing when the last mask mandates were ended. Airline passengers cheered. School children erupted in joy. Many breathed a sigh of relief — finally unencumbered. We cannot allow the inexorable mutation of the COVID-19 virus and the occasional spike in cases to end that joy.\\nCLICK HERE TO GET THE FOX NEWS APP\\nAmericans should be free to live their lives — to travel, to work and go to school — without subjection to needless force. Let’s pass the Freedom to Breathe Act and ensure that they can.\\xa0\\nCOVID may have taken American lives, but it can never again take Americans’ freedom. \\xa0\\nCLICK HERE TO READ MORE FROM SEN. J.D. VANCE\\nRepublican J.D. Vance represents Ohio in the United States Senate.\\nGet the recap of top opinion commentary and original content throughout the week.\\nSubscribed\\nYou\\'ve successfully subscribed to this newsletter!\\n\\n        This material may not be published, broadcast, rewritten, or redistributed. ©2023 FOX News Network, LLC. All rights reserved. Quotes displayed in real-time or delayed by at least 15 minutes. Market data provided by Factset. Powered and implemented by FactSet Digital Solutions. Legal Statement. Mutual Fund and ETF data provided by Refinitiv Lipper.\\n      ',\n",
        " 'J.D. Vance',\n",
        " 'Fox News')"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 107,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,26 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['@type', '@context', 'url', 'author', 'headline', 'description', 'dateline', 'datePublished', 'dateModified', 'mainEntityOfPage', 'image', 'articleBody', 'articleSection', 'keywords', 'publisher', 'video'])\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "('Tesla Cybertruck Torn To Pieces By Hose',\n",
-       " 'HOLLISTER, CA—Its stainless steel panels immediately crumpling from the pressure of the stream of water, a Tesla Cybertruck was reportedly torn to pieces Friday after getting sprayed by a hose. As seen in the now-viral video shared across social media platforms, the 7,000-pound electric vehicle splintered into dozens of pieces under the onslaught of the $39.99 hose purchased from Lowe’s, each bead of water from the gardening implement puncturing holes in the truck’s body until the entire vehicle shuddered and collapsed into a pile of broken glass and shrapnel. In a statement, Tesla Motors CEO Elon Musk defended the build quality of the Cybertruck, blaming the damage on the hose being set to “jet” at the time of the incident. At press time, sources confirmed that the remaining, dripping-wet pieces of the vehicle pieces  had burst into flames. \\n\\n\\n',\n",
+       " 'HOLLISTER, CA—Its stainless steel panels immediately crumpling from the pressure of the stream of water, a Tesla Cybertruck was reportedly torn to pieces Friday after getting sprayed by a hose. As seen in the now-viral video shared across social media platforms, the 7,000-pound electric vehicle splintered into dozens of pieces under the onslaught of the $39.99 hose purchased from Lowe’s, each bead of water from the gardening implement puncturing holes in the truck’s body until the entire vehicle shuddered and collapsed into a pile of broken glass and shrapnel. In a statement, Tesla Motors CEO Elon Musk defended the build quality of the Cybertruck, blaming the damage on the hose being set to “jet” at the time of the incident. At press time, sources confirmed that the remaining, dripping-wet pieces of the vehicle pieces  had burst into flames. ',\n",
        " 'The Ellen Show',\n",
        " 'The Onion')"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,16 +129,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['@context', 'dateModified', 'image', 'author', 'video', 'id', 'mainEntityOfPage', 'name', 'articleBody', 'publisher', 'datePublished', '@type', 'description', 'headline'])\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -160,7 +141,7 @@
        " 'Daily Mail')"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 109,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,16 +152,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "dict_keys(['@context', '@type', 'url', 'publisher', 'headline', 'image', 'datePublished', 'dateModified', 'keywords', 'articleSection', 'mainEntityOfPage', 'author'])\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
@@ -190,7 +164,7 @@
        " 'The Sun')"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
